<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".ui.login.CongratulationsActivity">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cong_header"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:text="@string/cong_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/cong_header"
        android:id="@+id/cong_text"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:text="@string/cong_long_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cong_text"
        android:id="@+id/cong_img"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:src="@mipmap/ok"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <Button
        app:layout_constraintTop_toBottomOf="@+id/cong_img"
        android:id="@+id/cong_ok_btn"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/complate_button_background"
        android:layout_gravity="center"
        android:textColor="@color/red_orange"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/complate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cong_back_step_tv"
            android:paddingHorizontal="36dp"
            android:textColor="#fff"
            android:text="@string/back_step"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/cong_start_again_tv"
            android:paddingHorizontal="36dp"
            android:textColor="#fff"
            android:text="@string/start_again"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>