<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity"
    android:orientation="vertical"
    android:background="#000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/forgot_password_back_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_back_img"/>
        <TextView
            app:layout_constraintStart_toEndOf="@+id/forgot_password_back_img"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="55dp"
            android:id="@+id/signin_sign_tv"
            android:text="@string/forgot_password_text"
            android:textSize="22sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:paddingHorizontal="2dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#fff"
        android:text="@string/forgot_password_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:src="@mipmap/ic_mail_yellow_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
        <View
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:background="@color/yellow"
            android:layout_width="1dp"
            android:layout_height="40dp"/>
        <TextView
            android:id="@+id/forgot_email_tv"
            android:gravity="center"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eposta_text"
            android:textSize="20sp"
            android:textColor="#838b8b"/>
    </LinearLayout>

    <View
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow"/>

    <Button
        android:id="@+id/forgot_password_send_btn"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/orange"
        android:text="@string/send_text"
        android:background="@drawable/sign_in_button_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</LinearLayout>